<resources>
    <!-- 网络请求失败提示信息 -->
    <string name="toast_error_http">无法连接到网络</string>
    <string name="toast_error_connect">请求服务器失败</string>
    <string name="toast_error_time_out">请求超时</string>
    <string name="toast_error_data">数据异常</string>
    <string name="toast_error_unknown">未知错误</string>

    <!-- 加载框 -->
    <string name="app_loading">加载中......</string>

    <!-- 登录 -->
    <string name="login_input_password_hint">请输入您的密码</string>
    <string name="login_input_address_hint">请输入地址 如:http://m.baidu.com/</string>
    <string name="login_input_account_hint">请输入您的账号/用户名/手机号</string>
    <string name="login_keep_password">记住密码</string>
    <string name="login_test_mode">测试模式</string>
    <string name="login_btn">登&#160;录</string>

    <!-- 主界面-导航按钮 -->
    <string name="main_nav_btn_net_fee_recharge">网费充值</string>
    <string name="main_nav_btn_service">服务</string>
    <string name="main_nav_btn_commodity">商品</string>
    <string name="main_nav_btn_order">订单</string>

    <!-- 主界面-网费充值 -->
    <string name="net_fee_vip_principal_balance">本金余额</string>
    <string name="net_fee_vip_award_amount">奖励金额</string>
    <string name="net_fee_vip_gabon">加本金</string>
    <string name="net_fee_vip_bonus">加奖励金</string>
    <string name="net_fee_vip_actual_payment_amount">实际付款金额</string>
    <string name="net_fee_total">合计</string>
    <string name="net_fee_rmb">¥</string>
    <string name="net_fee_btn_go_shopping">去购物</string>
    <string name="net_fee_btn_total">结算</string>
    <string name="net_fee_btn_place_an_order">下订单</string>
    <string name="net_fee_use_coupon">使用优惠券</string>
    <string name="net_fee_payment_type">支付方式</string>
    <string name="net_fee_payment_type_online">在线</string>
    <string name="net_fee_payment_type_buckle">卡扣</string>
    <string name="net_fee_payment_type_offline">客维</string>
    <string name="net_fee_search_input_hint">输入机位号/身份证/姓名进行搜索</string>
    <string name="net_fee_vip_info">会员信息</string>
    <string name="net_fee_vip_info_delete">删除</string>
    <string name="net_fee_use_coupon_format" formatted="true">￥%1$s</string>
    <string name="net_fee_pay_shop">购买商品</string>

    <!-- 主界面-选择商品 -->
    <string name="commodity_search_hint">搜索商品</string>
    <string name="commodity_title">选择商品</string>

    <!-- 主界面-订单列表 -->
    <string name="order_list">订单列表</string>
    <string name="order_wait_payment">待支付</string>
    <string name="order_all">全部</string>
    <string name="money_10">10.00</string>
    <string name="money_20">20.00</string>
    <string name="money_30">30.00</string>
    <string name="money_50">50.00</string>
    <string name="money_100">100.00</string>
    <string name="zero">0</string>
    <string name="wait_pay_select_all">全选</string>
    <string name="wait_pay_order_payment_btn">支&#160;付</string>
    <string name="wait_payment_to_pay">去支付</string>
    <string name="wait_payment_cancel_pay">取消订单</string>
    <string name="confirm_order">确认订单</string>
    <string name="select_fill_hint">选填</string>
    <string name="go_net_fee_recharge">去充值</string>
    <string name="create_order_note">备注</string>
    <string name="add_to_shop_car">加入购物车</string>
    <string name="buy_now">立即购买</string>
    <string name="shop_taste">口味</string>
    <string name="shop_norm">规格</string>
    <string name="app_btn_cancel">取消</string>
    <string name="app_btn_ok">确定</string>
    <string name="app_select_coupon">选择优惠券</string>
    <string name="app_coupon_not_use">不使用</string>
    <string name="coupon_service_activity">门店活动</string>
    <string name="coupon_user_coupon">客户优惠券</string>
    <string name="app_exit_login">退出登录</string>
    <string name="app_no_shop">没有商品哦~</string>
    <string name="app_scan_message">将二维码/条码放入框内即可自动扫描</string>
    <string name="app_payment_service">客维付款</string>
    <string name="app_must_pay_money">应付:</string>
    <string name="app_service_password">客维密码:</string>
    <string name="service_password_hint">输入密码</string>
    <string name="app_pay_success">支付成功！</string>
    <string name="app_pay_failure">支付失败！</string>
    <string name="app_no_coupons">暂无可用优惠券~</string>
    <string name="net_fee_select_or_input_money">选择或输入金额</string>
    <string name="app_input_recharge_monet_title">输入充值金额</string>
    <string name="app_tv_input_name">充值金额(元) :</string>

    <!--服务-->
    <string name="service_state">接单中</string>
    <string name="service_tab_call_service">呼叫服务</string>
    <string name="service_tab_goods_order">商品接单</string>
    <string name="service_action_transfer">转接</string>
    <string name="service_action_order_rob">抢单</string>
    <string name="service_action_order_produced">出品</string>
    <string name="service_action_order_receive">接单</string>
    <string name="service_action_cancel">取消</string>
    <string name="transferSuccess">转接成功</string>
    <string name="transferFalse">转接失败，请稍后重试</string>
</resources>
