<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <com.kiegame.mobile.ui.views.CleanFocusLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/translucent_black_50"
        android:clickable="true"
        android:focusable="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_menu_auto_fill"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.75">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/app_input_recharge_monet_title"
                android:textColor="@color/black_text"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_input_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/app_tv_input_name"
                android:textColor="@color/black_text"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

            <EditText
                android:id="@+id/tv_input_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@drawable/vector_password_input_background"
                android:digits="0123456789."
                android:gravity="center_vertical|start"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:maxLength="5"
                android:paddingLeft="8dp"
                android:paddingTop="5dp"
                android:paddingRight="8dp"
                android:paddingBottom="5dp"
                android:singleLine="true"
                android:textColor="@color/black_text"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_input_name"
                app:layout_constraintLeft_toRightOf="@id/tv_input_name"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_input_name"
                tools:ignore="LabelFor"
                tools:text="15" />

            <View
                android:id="@+id/vv_divider_line"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_input_content" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vv_divider_line">

                <TextView
                    android:id="@+id/tv_dialog_btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_shop_cancel_btn_background"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/app_btn_cancel"
                    android:textColor="#282828"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_dialog_btn_ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_shop_ok_btn_background"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/app_btn_ok"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.kiegame.mobile.ui.views.CleanFocusLayout>
</layout>