<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.viewpager.widget.ViewPager
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/cl_nav_bar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_nav_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:id="@+id/tv_btn_net_fee"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_net_fee_press"
                android:drawablePadding="@dimen/main_nav_btn_padding_top_bottom"
                android:gravity="center"
                android:paddingTop="@dimen/main_nav_btn_padding_top_bottom"
                android:paddingBottom="@dimen/main_nav_btn_padding_top_bottom"
                android:text="@string/main_nav_btn_net_fee_recharge"
                android:textColor="@color/main_nav_btn_press"
                android:textSize="@dimen/main_nav_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/tv_btn_commodity"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_btn_commodity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_commodity_none"
                android:drawablePadding="@dimen/main_nav_btn_padding_top_bottom"
                android:gravity="center"
                android:paddingTop="@dimen/main_nav_btn_padding_top_bottom"
                android:paddingBottom="@dimen/main_nav_btn_padding_top_bottom"
                android:text="@string/main_nav_btn_commodity"
                android:textColor="@color/main_nav_btn_none"
                android:textSize="@dimen/main_nav_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/tv_btn_net_fee"
                app:layout_constraintRight_toLeftOf="@id/tv_btn_order"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_btn_order"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_order_none"
                android:drawablePadding="@dimen/main_nav_btn_padding_top_bottom"
                android:gravity="center"
                android:paddingTop="@dimen/main_nav_btn_padding_top_bottom"
                android:paddingBottom="@dimen/main_nav_btn_padding_top_bottom"
                android:text="@string/main_nav_btn_order"
                android:textColor="@color/main_nav_btn_none"
                android:textSize="@dimen/main_nav_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/tv_btn_commodity"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>