<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/radius_white_2dp"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_time_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textColor="#e02e2c"
                android:textSize="17sp"
                tools:text="即将超时：剩余00:26s" />

            <TextView
                android:id="@+id/tv_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:textColor="#1a1a1a"
                android:textSize="15sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="B135机呼叫已超时，请立即\n前往服务  " />

            <LinearLayout
                android:id="@+id/ll_transfer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/shape_shop_cancel_btn_background"
                    android:paddingLeft="48dp"
                    android:paddingTop="10dp"
                    android:paddingRight="48dp"
                    android:paddingBottom="10dp"
                    android:text="@string/app_btn_cancel"
                    android:textColor="#282828"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_transfer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/radius_yellow_10dp"
                    android:paddingLeft="48dp"
                    android:paddingTop="10dp"
                    android:paddingRight="48dp"
                    android:paddingBottom="10dp"
                    android:text="@string/service_action_transfer"
                    android:textColor="#282828"
                    android:textSize="12sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_confirm"
                android:layout_width="200dp"
                android:layout_height="34dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/radius_black_10dp"
                android:text="@string/app_btn_ok"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="13sp"
                android:visibility="gone" />

        </LinearLayout>

    </FrameLayout>
</layout>